--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,28 +26,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+        <!--<activity-->
+        <!--android:name="com.facebook.CustomTabActivity"-->
+        <!--android:exported="true">-->
+        <!--<intent-filter>-->
+        <!--<action android:name="android.intent.action.VIEW" />-->
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
+        <!--<category android:name="android.intent.category.DEFAULT" />-->
+        <!--<category android:name="android.intent.category.BROWSABLE" />-->
 
-                <data android:scheme="@string/facebook_app_id" />
-            </intent-filter>
-        </activity>
+        <!--<data android:scheme="@string/facebook_app_id" />-->
+        <!--</intent-filter>-->
+        <!--</activity>-->
 
-        <!--Meta data for facebook -->
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+        <!--&lt;!&ndash;Meta data for facebook &ndash;&gt;-->
+        <!--<meta-data-->
+        <!--android:name="com.facebook.sdk.ApplicationId"-->
+        <!--android:value="@string/facebook_app_id" />-->
 
         <activity
             android:name=".dashboard.DashboardActivity"
-            android:label="@string/title_activity_dashboard"
+            android:label="@string/app_name"
             android:theme="@style/AppTheme"></activity>
+
+        <activity
+            android:name=".login.ui.RegisterActivity"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
