--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,5 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-maps:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'org.jetbrains:annotations-java5:15.0'
 }
