--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:9.8.0'
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'org.jetbrains:annotations-java5:15.0'
+    compile files('libs/GraphView-4.0.1.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
