--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.8.0'
     compile 'org.jetbrains:annotations-java5:15.0'
     compile files('libs/GraphView-4.0.1.jar')
+    compile 'com.borax12.materialdaterangepicker:library:1.9'
 }
 
 apply plugin: 'com.google.gms.google-services'
