--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,6 +81,9 @@
             android:name=".order.OrderDetailsActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.Base"  />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="d7527c7823522f2c8672f93991ff0532472e56b4" />
     </application>
 
 </manifest>
