--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     compile 'org.jetbrains:annotations-java5:15.0'
     compile files('libs/GraphView-4.0.1.jar')
     compile 'com.borax12.materialdaterangepicker:library:1.9'
+    compile 'com.patrickpissurno:ripple-effect:1.3.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive = true;
     }
